apps/production/container-registry/base/resources/registry/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${REGISTRY_NAME}
spec:
  serviceName: ${REGISTRY_NAME}
  replicas: 1
  selector:
    matchLabels:
      app: ${REGISTRY_NAME}
  template:
    metadata:
      labels:
        app: ${REGISTRY_NAME}
    spec:
      containers:
        - name: container-registry
          image: docker.io/registry:2.8
          imagePullPolicy: Always
          ports:
            - name: registry
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/docker/registry
              name: config
            - mountPath: /auth/registry
              name: htpasswd
            - mountPath: /var/lib/registry
              name: data
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
      volumes:
        - name: config
          configMap:
            defaultMode: 420
            name: ${REGISTRY_NAME}-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Gi
