apps/production/container-registry/base/resources/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${REGISTRY_NAME}
spec:
  selector:
    app: ${REGISTRY_NAME}
  ports:
    - name: registry
      targetPort: 5000
      port: 5000
